force-app/main/default/objects/Site_Survey__c/Site_Survey__c.object-meta.xml
<CustomObject>
    <description>Used to record information on a site survey.</description>
    <label>Site Survey</label>
    <nameField>
        <displayFormat>SS_{0000}</displayFormat>
        <label>Site Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>