force-app/main/default/objects/Site_Survey__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <label>Actions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>