force-app/main/default/objects/Site_Survey__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used for general contractors and vendors</inlineHelpText>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Site_Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>