force-app/main/default/objects/Site_Survey__c/fields/Crew_Foreman__c.field-meta.xml
<CustomField>
    <fullName>Crew_Foreman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew Foreman</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Site_Surveys4</relationshipName>
    <type>Lookup</type>
</CustomField>