force-app/main/default/objects/Site_Survey__c/fields/Current_weather_condition_at_location__c.field-meta.xml
<CustomField>
    <fullName>Current_weather_condition_at_location__c</fullName>
    <label>Current weather condition at location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>