force-app/main/default/objects/Site_Survey__c/fields/Failed_Items__c.field-meta.xml
<CustomField>
    <fullName>Failed_Items__c</fullName>
    <label>Failed Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>