force-app/main/default/objects/Site_Survey__c/fields/GC_2__c.field-meta.xml
<CustomField>
    <fullName>GC_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-Contractor 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.GC_and_Vendor_for_site_Safety__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Surveys (Sub-Contractor 1)</relationshipLabel>
    <relationshipName>Site_Surveys2</relationshipName>
    <type>Lookup</type>
</CustomField>