force-app/main/default/objects/Site_Survey__c/fields/No_crew_is_physically_present__c.field-meta.xml
<CustomField>
    <fullName>No_crew_is_physically_present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No crew is physically present</label>
    <type>Checkbox</type>
</CustomField>