force-app/main/default/objects/Site_Survey__c/fields/Positive_Response__c.field-meta.xml
<CustomField>
    <fullName>Positive_Response__c</fullName>
    <label>Positive Responses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>