force-app/main/default/objects/Site_Survey__c/fields/Primary_General_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Primary_General_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary General Contractor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.GC_and_Vendor_for_site_Safety__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Surveys (Primary General Contractor)</relationshipLabel>
    <relationshipName>Site_Surveys3</relationshipName>
    <type>Lookup</type>
</CustomField>