force-app/main/default/objects/Site_Survey__c/fields/QACMC01__c.field-meta.xml
<CustomField>
    <fullName>QACMC01__c</fullName>
    <label>CERT_BBP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>