force-app/main/default/objects/Site_Survey__c/fields/QACMC02__c.field-meta.xml
<CustomField>
    <fullName>QACMC02__c</fullName>
    <label>CERT_OSHA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>