force-app/main/default/objects/Site_Survey__c/fields/QACMC03__c.field-meta.xml
<CustomField>
    <fullName>QACMC03__c</fullName>
    <label>CERT_NWSA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>