force-app/main/default/objects/Site_Survey__c/fields/QACRS01__c.field-meta.xml
<CustomField>
    <fullName>QACRS01__c</fullName>
    <label>CRANE_LIFT_PLAN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>