force-app/main/default/objects/Site_Survey__c/fields/QACRS03__c.field-meta.xml
<CustomField>
    <fullName>QACRS03__c</fullName>
    <label>CRANE_INSPECTION_TAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>