force-app/main/default/objects/Site_Survey__c/fields/QAEH01__c.field-meta.xml
<CustomField>
    <fullName>QAEH01__c</fullName>
    <label>ELECTRICAL_PANEL_HAZARD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>