force-app/main/default/objects/Site_Survey__c/fields/QAEH03__c.field-meta.xml
<CustomField>
    <fullName>QAEH03__c</fullName>
    <label>ELECTRICAL_EXTENSION_CORD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>