force-app/main/default/objects/Site_Survey__c/fields/QAFPE01__c.field-meta.xml
<CustomField>
    <fullName>QAFPE01__c</fullName>
    <label>PFAS_INSPECTION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>