force-app/main/default/objects/Site_Survey__c/fields/QAGP01__c.field-meta.xml
<CustomField>
    <fullName>QAGP01__c</fullName>
    <label>GINPOLE_TRAINING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>