force-app/main/default/objects/Site_Survey__c/fields/QAHE01__c.field-meta.xml
<CustomField>
    <fullName>QAHE01__c</fullName>
    <label>HEQUIP_OPERATOR_TRAINING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>