force-app/main/default/objects/Site_Survey__c/fields/QAHE02__c.field-meta.xml
<CustomField>
    <fullName>QAHE02__c</fullName>
    <label>HEQUIP_ROPS_SEATBELTS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>