force-app/main/default/objects/Site_Survey__c/fields/QAHE03__c.field-meta.xml
<CustomField>
    <fullName>QAHE03__c</fullName>
    <label>HEQUIP_INSPECTION_DOCUMENTATION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>