force-app/main/default/objects/Site_Survey__c/fields/QAHPT01__c.field-meta.xml
<CustomField>
    <fullName>QAHPT01__c</fullName>
    <label>TOOL_ELECTRICAL_ CORD_INSPECTION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>