force-app/main/default/objects/Site_Survey__c/fields/QAHPT02__c.field-meta.xml
<CustomField>
    <fullName>QAHPT02__c</fullName>
    <label>TOOL_SAFETY_EQUIPMENT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>