force-app/main/default/objects/Site_Survey__c/fields/QAHPT03__c.field-meta.xml
<CustomField>
    <fullName>QAHPT03__c</fullName>
    <label>TOOL_DROP_PREVENTION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>