force-app/main/default/objects/Site_Survey__c/fields/QAJSC01__c.field-meta.xml
<CustomField>
    <fullName>QAJSC01__c</fullName>
    <label>SITE_SAFETY_BANNER</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>