force-app/main/default/objects/Site_Survey__c/fields/QAJSC02__c.field-meta.xml
<CustomField>
    <fullName>QAJSC02__c</fullName>
    <label>SITE_FIRST_AID_KIT_CONTENTS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>