force-app/main/default/objects/Site_Survey__c/fields/QAJSC03__c.field-meta.xml
<CustomField>
    <fullName>QAJSC03__c</fullName>
    <label>SITE_FIRE_EXTINGUISHER_INSPECTION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>