force-app/main/default/objects/Site_Survey__c/fields/QAJSC03_Comments__c.field-meta.xml
<CustomField>
    <fullName>QAJSC03_Comments__c</fullName>
    <label>Notes and Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>