force-app/main/default/objects/Site_Survey__c/fields/QALS01__c.field-meta.xml
<CustomField>
    <fullName>QALS01__c</fullName>
    <label>LADDER_MAINTENANCE/INSPECTION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>