force-app/main/default/objects/Site_Survey__c/fields/QALS02__c.field-meta.xml
<CustomField>
    <fullName>QALS02__c</fullName>
    <label>LADDER_SECURED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>