force-app/main/default/objects/Site_Survey__c/fields/QALS03__c.field-meta.xml
<CustomField>
    <fullName>QALS03__c</fullName>
    <label>LADDER_SLOPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>