force-app/main/default/objects/Site_Survey__c/fields/QAMEWP01__c.field-meta.xml
<CustomField>
    <fullName>QAMEWP01__c</fullName>
    <label>MEWP_AERIAL_LIFT _OPERATOR_MANUAL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>