force-app/main/default/objects/Site_Survey__c/fields/QAMEWP02__c.field-meta.xml
<CustomField>
    <fullName>QAMEWP02__c</fullName>
    <label>MEWP_AERIAL_LIFT _CERTIFICATION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>