force-app/main/default/objects/Site_Survey__c/fields/QAMEWP03__c.field-meta.xml
<CustomField>
    <fullName>QAMEWP03__c</fullName>
    <label>MEWP_OPERATOR_CERTIFICATION _GROUPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>