force-app/main/default/objects/Site_Survey__c/fields/QAOO01__c.field-meta.xml
<CustomField>
    <fullName>QAOO01__c</fullName>
    <label>OBSERVATION_FOLLOW_UP_REQUIRED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>