force-app/main/default/objects/Site_Survey__c/fields/QAOO02__c.field-meta.xml
<CustomField>
    <fullName>QAOO02__c</fullName>
    <label>OBSERVATION_OUTCOME</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>