force-app/main/default/objects/Site_Survey__c/fields/QAPLHE01__c.field-meta.xml
<CustomField>
    <fullName>QAPLHE01__c</fullName>
    <label>PERSONNELLIFTING_PLAN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>