force-app/main/default/objects/Site_Survey__c/fields/QAPLHE02__c.field-meta.xml
<CustomField>
    <fullName>QAPLHE02__c</fullName>
    <label>PERSONNELLIFTING_PLATFORM_ID_PLATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>