force-app/main/default/objects/Site_Survey__c/fields/QAPPE02__c.field-meta.xml
<CustomField>
    <fullName>QAPPE02__c</fullName>
    <label>PPE_FOOTWEAR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>