force-app/main/default/objects/Site_Survey__c/fields/QAPPE03__c.field-meta.xml
<CustomField>
    <fullName>QAPPE03__c</fullName>
    <label>PPE_EYE_PROTECTION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>