force-app/main/default/objects/Site_Survey__c/fields/QARAE01__c.field-meta.xml
<CustomField>
    <fullName>QARAE01__c</fullName>
    <label>RIGGING_ROPE_TERMINATION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>