force-app/main/default/objects/Site_Survey__c/fields/QARAE02__c.field-meta.xml
<CustomField>
    <fullName>QARAE02__c</fullName>
    <label>RIGGING_BLOCK_STANDARDS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>