force-app/main/default/objects/Site_Survey__c/fields/QARAE03__c.field-meta.xml
<CustomField>
    <fullName>QARAE03__c</fullName>
    <label>RIGGING_BLOCK_SHEAVE_SIZE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>