force-app/main/default/objects/Site_Survey__c/fields/QARFH01__c.field-meta.xml
<CustomField>
    <fullName>QARFH01__c</fullName>
    <label>RF_HAZARDS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>