force-app/main/default/objects/Site_Survey__c/fields/QARFH02__c.field-meta.xml
<CustomField>
    <fullName>QARFH02__c</fullName>
    <label>RF_EXPOSURE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>