force-app/main/default/objects/Site_Survey__c/fields/QARS01__c.field-meta.xml
<CustomField>
    <fullName>QARS01__c</fullName>
    <label>LOAD_ROPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>