force-app/main/default/objects/Site_Survey__c/fields/QARS02__c.field-meta.xml
<CustomField>
    <fullName>QARS02__c</fullName>
    <label>TAG_ROPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>