force-app/main/default/objects/Site_Survey__c/fields/QARS03__c.field-meta.xml
<CustomField>
    <fullName>QARS03__c</fullName>
    <label>RESCUE_ROPE/KIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>