force-app/main/default/objects/Site_Survey__c/fields/QARTS01__c.field-meta.xml
<CustomField>
    <fullName>QARTS01__c</fullName>
    <label>ROOF_UNPROTECTED_EDGE_FALL_RESTRAINT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>