force-app/main/default/objects/Site_Survey__c/fields/QARTS02__c.field-meta.xml
<CustomField>
    <fullName>QARTS02__c</fullName>
    <label>ROOF_WARNING_LINE_INSTALLATION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>