force-app/main/default/objects/Site_Survey__c/fields/QARTS03__c.field-meta.xml
<CustomField>
    <fullName>QARTS03__c</fullName>
    <label>ROOF_OPEN_HOLE_BARRIERS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>