force-app/main/default/objects/Site_Survey__c/fields/QASCE01__c.field-meta.xml
<CustomField>
    <fullName>QASCE01__c</fullName>
    <label>CRITICAL_NOC_LOGIN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>