force-app/main/default/objects/Site_Survey__c/fields/QASCE02__c.field-meta.xml
<CustomField>
    <fullName>QASCE02__c</fullName>
    <label>CRITICAL_COMPETENT_PERSON</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>