force-app/main/default/objects/Site_Survey__c/fields/QASD01__c.field-meta.xml
<CustomField>
    <fullName>QASD01__c</fullName>
    <label>DOC_EMERGENCY_DATA_FORM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>