force-app/main/default/objects/Site_Survey__c/fields/QASD02__c.field-meta.xml
<CustomField>
    <fullName>QASD02__c</fullName>
    <label>DOC_SDS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>