force-app/main/default/objects/Site_Survey__c/fields/QATEB01__c.field-meta.xml
<CustomField>
    <fullName>QATEB01__c</fullName>
    <label>TRENCH_UTILITY_LOCATES</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>